fix: avatar visible on open popup

--- a/src/blocks/profile/__avatar-group/.profile__avatar-group.css
+++ b/src/blocks/profile/__avatar-group/.profile__avatar-group.css
@@ -14,7 +14,7 @@
  width: 120px;
  height: 120px;
  z-index: 2;
- border-radius: 50%;
+
 
  opacity: 0;
  transition: all .3s linear;
