--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -5,7 +5,7 @@
     margin-right: 26px;
     border-radius: 50%;
 
-    z-index: 1;
+    z-index: 0;
 }
 
 @media screen and (max-width: 635px){
